Update sort order by RS

--- a/Minervini_Screener_Dynamic_Report.ipynb
+++ b/Minervini_Screener_Dynamic_Report.ipynb
@@ -282,10 +282,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "6ce51030",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ ALLE passed Minervini\n",
+      "❌ GOOGL failed Minervini: 1, 2, 4\n",
+      "❌ GOOG failed Minervini: 1, 2, 4\n",
+      "✅ MO passed Minervini\n",
+      "❌ AMZN failed Minervini: 1, 2, 4\n",
+      "❌ AXP failed Minervini: 1, 2, 4\n",
+      "✅ APH passed Minervini\n",
+      "❌ APO failed Minervini: 1, 2, 3, 4, 5, 7\n",
+      "❌ ANET failed Minervini: 1, 2, 4\n",
+      "✅ T passed Minervini\n",
+      "❌ ATO failed Minervini: 6\n",
+      "✅ AZO passed Minervini\n",
+      "❌ AXON failed Minervini: 5\n",
+      "❌ BKR failed Minervini: 1, 2, 4\n",
+      "❌ BAC failed Minervini: 1, 2, 4\n",
+      "❌ BLK failed Minervini: 1, 2, 4\n",
+      "❌ BX failed Minervini: 1, 2, 3, 4\n",
+      "✅ BK passed Minervini\n",
+      "❌ BA failed Minervini: 5\n",
+      "❌ BKNG failed Minervini: 5\n",
+      "❌ BSX failed Minervini: 1, 5, 6\n",
+      "✅ AVGO passed Minervini\n",
+      "❌ CHRW failed Minervini: 1, 2, 4\n",
+      "❌ CDNS failed Minervini: 1, 2, 4\n",
+      "✅ COF passed Minervini\n",
+      "❌ CAH failed Minervini: 5\n",
+      "❌ CCL failed Minervini: 1, 2, 4\n",
+      "❌ CAT failed Minervini: 1, 2, 4\n",
+      "✅ CBRE passed Minervini\n",
+      "❌ COR failed Minervini: 5\n",
+      "✅ CNP passed Minervini\n",
+      "❌ SCHW failed Minervini: 5\n",
+      "❌ CSCO failed Minervini: 5\n",
+      "✅ C passed Minervini\n",
+      "❌ CFG failed Minervini: 1, 2, 4\n",
+      "❌ CME failed Minervini: 1, 5, 6\n",
+      "❌ COIN failed Minervini: 1, 2, 4, 5, 7\n",
+      "✅ CEG passed Minervini\n",
+      "✅ GLW passed Minervini\n",
+      "❌ CTVA failed Minervini: 5\n",
+      "❌ CRWD failed Minervini: 5\n",
+      "❌ CMI failed Minervini: 1, 2, 4\n",
+      "✅ CVS passed Minervini\n",
+      "✅ DRI passed Minervini\n",
+      "❌ DDOG failed Minervini: 1, 2, 4, 5\n",
+      "❌ DAL failed Minervini: 1, 2, 3, 4\n",
+      "❌ DG failed Minervini: 5\n",
+      "❌ DLTR failed Minervini: 5\n",
+      "✅ DASH passed Minervini\n",
+      "❌ ETN failed Minervini: 1, 2, 3, 4\n",
+      "✅ EBAY passed Minervini\n",
+      "✅ EA passed Minervini\n",
+      "❌ EMR failed Minervini: 1, 2, 4, 5\n",
+      "✅ ETR passed Minervini\n",
+      "❌ EQT failed Minervini: 1, 4, 5\n",
+      "❌ EVRG failed Minervini: 6\n",
+      "❌ EXE failed Minervini: 1, 4, 5\n",
+      "❌ EXPE failed Minervini: 1, 2, 4\n",
+      "✅ FFIV passed Minervini\n",
+      "❌ FAST failed Minervini: 5\n",
+      "✅ FOXA passed Minervini\n",
+      "❌ FOX failed Minervini: 5\n",
+      "❌ BEN failed Minervini: 5\n",
+      "✅ GRMN passed Minervini\n",
+      "✅ GE passed Minervini\n",
+      "✅ GEV passed Minervini\n",
+      "❌ GNRC failed Minervini: 1, 2, 4\n",
+      "❌ GM failed Minervini: 1, 2, 4\n",
+      "❌ GILD failed Minervini: 5\n",
+      "✅ GL passed Minervini\n",
+      "✅ GS passed Minervini\n",
+      "❌ HPE failed Minervini: 1, 2, 4\n",
+      "✅ HLT passed Minervini\n",
+      "✅ HWM passed Minervini\n",
+      "❌ HBAN failed Minervini: 1, 2, 4\n",
+      "✅ IBM passed Minervini\n",
+      "✅ IDXX passed Minervini\n",
+      "❌ INCY failed Minervini: 1, 2, 4\n",
+      "✅ PODD passed Minervini\n",
+      "❌ IBKR failed Minervini: 5\n",
+      "❌ IVZ failed Minervini: 1, 2, 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\364358\\AppData\\Local\\Temp\\ipykernel_10908\\2901662644.py:67: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  detailedExportList = pd.concat([detailedExportList, pd.DataFrame([{\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ JBL failed Minervini: 5\n",
+      "❌ J failed Minervini: 1, 2, 4\n",
+      "✅ JCI passed Minervini\n",
+      "✅ JPM passed Minervini\n",
+      "❌ KMI failed Minervini: 1, 2, 4\n",
+      "✅ KLAC passed Minervini\n",
+      "❌ KR failed Minervini: 1, 5, 6\n",
+      "✅ LHX passed Minervini\n",
+      "✅ LH passed Minervini\n",
+      "✅ LRCX passed Minervini\n",
+      "❌ LVS failed Minervini: 1, 2, 4, 5\n",
+      "✅ LYV passed Minervini\n",
+      "❌ L failed Minervini: 6\n",
+      "❌ MCK failed Minervini: 5\n",
+      "✅ META passed Minervini\n",
+      "✅ MU passed Minervini\n",
+      "✅ MNST passed Minervini\n",
+      "✅ MS passed Minervini\n",
+      "❌ MOS failed Minervini: 5\n",
+      "❌ NDAQ failed Minervini: 5\n",
+      "❌ NFLX failed Minervini: 5\n",
+      "✅ NEM passed Minervini\n",
+      "✅ NTRS passed Minervini\n",
+      "❌ NCLH failed Minervini: 1, 2, 3, 4\n",
+      "✅ NRG passed Minervini\n",
+      "✅ NVDA passed Minervini\n",
+      "✅ ORLY passed Minervini\n",
+      "✅ ORCL passed Minervini\n",
+      "✅ PLTR passed Minervini\n",
+      "✅ PSKY passed Minervini\n",
+      "✅ PH passed Minervini\n",
+      "❌ PAYC failed Minervini: 1, 4, 5\n",
+      "❌ PM failed Minervini: 1, 5\n",
+      "❌ PWR failed Minervini: 5\n",
+      "✅ RL passed Minervini\n",
+      "❌ RJF failed Minervini: 1, 2, 4\n",
+      "✅ RTX passed Minervini\n",
+      "❌ RF failed Minervini: 1, 2, 4\n",
+      "❌ ROK failed Minervini: 5\n",
+      "❌ RCL failed Minervini: 5\n",
+      "✅ STX passed Minervini\n",
+      "❌ SNA failed Minervini: 1, 2, 3, 4, 6\n",
+      "❌ STT failed Minervini: 5\n",
+      "❌ STLD failed Minervini: 3\n",
+      "❌ SYF failed Minervini: 1, 2, 4\n",
+      "✅ TTWO passed Minervini\n",
+      "✅ TPR passed Minervini\n",
+      "✅ TEL passed Minervini\n",
+      "✅ TDY passed Minervini\n",
+      "❌ TSLA failed Minervini: 1, 2, 4\n",
+      "✅ TKO passed Minervini\n",
+      "❌ TRMB failed Minervini: 1, 2, 4, 5\n",
+      "✅ UBER passed Minervini\n",
+      "✅ ULTA passed Minervini\n",
+      "❌ UAL failed Minervini: 1, 2, 4\n",
+      "❌ URI failed Minervini: 1, 2, 4\n",
+      "✅ VLO passed Minervini\n",
+      "✅ VRSN passed Minervini\n",
+      "✅ VST passed Minervini\n",
+      "❌ VMC failed Minervini: 1, 2, 4\n",
+      "✅ WRB passed Minervini\n",
+      "✅ WMT passed Minervini\n",
+      "❌ DIS failed Minervini: 1, 2, 4, 5\n",
+      "✅ WBD passed Minervini\n",
+      "✅ WFC passed Minervini\n",
+      "✅ WELL passed Minervini\n",
+      "✅ WDC passed Minervini\n",
+      "❌ WSM failed Minervini: 1, 2, 4\n",
+      "✅ WMB passed Minervini\n",
+      "✅ WYNN passed Minervini\n",
+      "\n",
+      "📄 72 stocks passed Minervini, saved to Minervini_Passed.csv\n",
+      "📄 79 stocks failed Minervini, saved to Minervini_Failed.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# 📌 Initialize export DataFrame\n",
     "detailedExportList = pd.DataFrame(columns=[\n",
@@ -372,16 +547,28 @@
     "passed_df = detailedExportList[detailedExportList['Status'] == \"✅ Passed Minervini\"]\n",
     "failed_df = detailedExportList[detailedExportList['Status'] != \"✅ Passed Minervini\"]\n",
     "\n",
+    "# Sort passed DataFrame by descending RS_Rating, then ascending Stock\n",
+    "passed_df_sorted = passed_df.sort_values(\n",
+    "    by=['RS_Rating', 'Stock'],\n",
+    "    ascending=[False, True]\n",
+    ").reset_index(drop=True)\n",
+    "\n",
+    "# Sort failed DataFrame by descending RS_Rating, then ascending Stock\n",
+    "failed_df_sorted = failed_df.sort_values(\n",
+    "    by=['RS_Rating', 'Stock'],\n",
+    "    ascending=[False, True]\n",
+    ").reset_index(drop=True)\n",
+    "\n",
+    "# Export to CSV\n",
+    "passed_df_sorted.to_csv(\"Minervini_Passed.csv\", index=False)\n",
+    "failed_df_sorted.to_csv(\"Minervini_Failed.csv\", index=False)\n",
+    "\n",
     "# # 📤 Export to Excel\n",
-    "# passed_df.to_excel(\"Minervini_Passed.xlsx\", index=False)\n",
-    "# failed_df.to_excel(\"Minervini_Failed.xlsx\", index=False)\n",
+    "# passed_df_sorted.to_excel(\"Minervini_Passed.xlsx\", index=False)\n",
+    "# failed_df_sorted.to_excel(\"Minervini_Failed.xlsx\", index=False)\n",
     "\n",
-    "# 📤 Export to CSV\n",
-    "passed_df.to_csv(\"Minervini_Passed.csv\", index=False)\n",
-    "failed_df.to_csv(\"Minervini_Failed.csv\", index=False)\n",
-    "\n",
-    "print(f\"\\n📄 {len(passed_df)} stocks passed Minervini, saved to Minervini_Passed.csv\")\n",
-    "print(f\"📄 {len(failed_df)} stocks failed Minervini, saved to Minervini_Failed.csv\")\n"
+    "print(f\"\\n📄 {len(passed_df_sorted)} stocks passed Minervini, saved to Minervini_Passed.csv\")\n",
+    "print(f\"📄 {len(failed_df_sorted)} stocks failed Minervini, saved to Minervini_Failed.csv\")\n"
    ]
   }
  ],
