Refactored code, rounded amounts to 2 decimal places, added Return Multiple to the final output.

--- a/Minervini_Screener_Dynamic_Report.ipynb
+++ b/Minervini_Screener_Dynamic_Report.ipynb
@@ -255,206 +255,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41faf96e",
+   "execution_count": 30,
+   "id": "6ce51030",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📊 Create RS Rating DataFrame\n",
-    "rs_df = pd.DataFrame({\n",
-    "    'Ticker': successful_tickers,\n",
-    "    'Returns_multiple': returns_multiples\n",
-    "})\n",
-    "rs_df['RS_Rating'] = rs_df['Returns_multiple'].rank(pct=True) * 100\n",
+    "import pandas as pd\n",
     "\n",
-    "# ✅ Filter top 30% by RS Rating (adjust quantile as needed)\n",
-    "top_30_percent = rs_df['RS_Rating'].quantile(0.7)\n",
-    "rs_top_df = rs_df[rs_df['RS_Rating'] >= top_30_percent]\n",
+    "def create_rs_top_df(successful_tickers, returns_multiples, top_quantile=0.7):\n",
+    "    \"\"\"\n",
+    "    Create RS Rating DataFrame and filter top stocks by percentile.\n",
+    "    \n",
+    "    Args:\n",
+    "        successful_tickers (list): List of tickers successfully loaded.\n",
+    "        returns_multiples (list): Corresponding return multiples for tickers.\n",
+    "        top_quantile (float): Quantile threshold for top RS stocks (default 0.7).\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: Top RS stocks with columns ['Ticker', 'Returns_Multiple', 'RS_Rating'].\n",
+    "    \"\"\"\n",
+    "    rs_df = pd.DataFrame({\n",
+    "        'Ticker': successful_tickers,\n",
+    "        'Returns_Multiple': returns_multiples\n",
+    "    })\n",
+    "    rs_df['RS_Rating'] = rs_df['Returns_Multiple'].rank(pct=True) * 100\n",
     "\n",
-    "print(rs_top_df[:10])\n",
-    "# Print sorted top RS stocks\n",
-    "print(rs_top_df.sort_values(by='RS_Rating', ascending=False).head(10))\n",
-    "\n",
-    "# ✅ Export all RS-rated stocks without filtering\n",
-    "rs_df.to_csv(\"rs_full_list.csv\", index=False)\n",
-    "print(f\"📊 Full RS stock list: {len(rs_df)} saved to rs_full_list.csv\")"
+    "    # Filter top stocks by RS_Rating quantile\n",
+    "    threshold = rs_df['RS_Rating'].quantile(top_quantile)\n",
+    "    rs_top_df = rs_df[rs_df['RS_Rating'] >= threshold].reset_index(drop=True)\n",
+    "    return rs_top_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "6ce51030",
+   "execution_count": 31,
+   "id": "b31ff6cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_minervini_report(yahoo_data, rs_top_df, export_prefix=\"Minervini\"):\n",
+    "    \"\"\"\n",
+    "    Generate Minervini report for top RS stocks without FutureWarning.\n",
+    "    \"\"\"\n",
+    "    rows = []  # Collect row dicts here instead of using concat in the loop\n",
+    "\n",
+    "    for stock in rs_top_df['Ticker']:\n",
+    "        try:\n",
+    "            df = yahoo_data.get(stock)\n",
+    "            if df is None or df.empty:\n",
+    "                print(f\"⚠️ No data for {stock}, skipping\")\n",
+    "                continue\n",
+    "\n",
+    "            df.columns = [col.split(\". \")[-1] for col in df.columns]\n",
+    "            df[['close', 'high', 'low']] = df[['close', 'high', 'low']].astype(float)\n",
+    "\n",
+    "            df['SMA_50'] = df['close'].rolling(50).mean()\n",
+    "            df['SMA_150'] = df['close'].rolling(150).mean()\n",
+    "            df['SMA_200'] = df['close'].rolling(200).mean()\n",
+    "\n",
+    "            currentClose = round(df['close'].iloc[-1], 2)\n",
+    "            SMA_50 = round(df['SMA_50'].iloc[-1], 2)\n",
+    "            SMA_150 = round(df['SMA_150'].iloc[-1], 2)\n",
+    "            SMA_200 = round(df['SMA_200'].iloc[-1], 2)\n",
+    "            low_52week = round(df['low'].iloc[-260:].min(), 2)\n",
+    "            high_52week = round(df['high'].iloc[-260:].max(), 2)\n",
+    "\n",
+    "            Returns_Multiple = round(rs_top_df.loc[rs_top_df['Ticker'] == stock, 'Returns_Multiple'].iloc[0], 2)\n",
+    "            RS_Rating = round(rs_top_df.loc[rs_top_df['Ticker'] == stock, 'RS_Rating'].iloc[0])\n",
+    "\n",
+    "            if pd.isnull([SMA_50, SMA_150, SMA_200]).any():\n",
+    "                status_msg = f\"❌ Skipped {stock}: Not enough data for SMAs ({len(df)} rows)\"\n",
+    "            else:\n",
+    "                SMA_200_20 = df['SMA_200'].iloc[-20] if len(df) >= 220 else 0\n",
+    "                conditions = [\n",
+    "                    currentClose > SMA_150 > SMA_200,\n",
+    "                    SMA_150 > SMA_200,\n",
+    "                    SMA_200 > SMA_200_20,\n",
+    "                    SMA_50 > SMA_150 > SMA_200,\n",
+    "                    currentClose > SMA_50,\n",
+    "                    currentClose >= 1.3 * low_52week,\n",
+    "                    currentClose >= 0.75 * high_52week\n",
+    "                ]\n",
+    "                if all(conditions):\n",
+    "                    status_msg = \"✅ Passed Minervini\"\n",
+    "                else:\n",
+    "                    failed = [str(i+1) for i, c in enumerate(conditions) if not c]\n",
+    "                    status_msg = f\"❌ Failed Minervini conditions: {', '.join(failed)}\"\n",
+    "\n",
+    "            # Add row dict to list\n",
+    "            rows.append({\n",
+    "                'Stock': stock,\n",
+    "                'Price': currentClose,\n",
+    "                '50 Day MA': SMA_50,\n",
+    "                '150 Day MA': SMA_150,\n",
+    "                '200 Day MA': SMA_200,\n",
+    "                '52 Week Low': low_52week,\n",
+    "                '52 Week High': high_52week,\n",
+    "                'Returns_Multiple': Returns_Multiple,\n",
+    "                'RS_Rating': RS_Rating,\n",
+    "                'Status': status_msg\n",
+    "            })\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"⚠️ Could not process {stock}: {e}\")\n",
+    "\n",
+    "    # Create DataFrame once at the end\n",
+    "    detailedExportList = pd.DataFrame(rows)\n",
+    "\n",
+    "    # Split and sort\n",
+    "    passed_df_sorted = detailedExportList[detailedExportList['Status'] == \"✅ Passed Minervini\"] \\\n",
+    "        .sort_values(by=['Returns_Multiple', 'Stock'], ascending=[False, True]).reset_index(drop=True)\n",
+    "\n",
+    "    failed_df_sorted = detailedExportList[detailedExportList['Status'] != \"✅ Passed Minervini\"] \\\n",
+    "        .sort_values(by=['Returns_Multiple', 'Stock'], ascending=[False, True]).reset_index(drop=True)\n",
+    "\n",
+    "    # Export\n",
+    "    passed_df_sorted.to_csv(f\"{export_prefix}_Passed.csv\", index=False)\n",
+    "    failed_df_sorted.to_csv(f\"{export_prefix}_Failed.csv\", index=False)\n",
+    "\n",
+    "    print(f\"\\n📄 {len(passed_df_sorted)} stocks passed Minervini, saved to {export_prefix}_Passed.csv\")\n",
+    "    print(f\"📄 {len(failed_df_sorted)} stocks failed Minervini, saved to {export_prefix}_Failed.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f7f59927",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ ALLE passed Minervini\n",
-      "❌ GOOGL failed Minervini: 1, 2, 4\n",
-      "❌ GOOG failed Minervini: 1, 2, 4\n",
-      "✅ MO passed Minervini\n",
-      "❌ AMZN failed Minervini: 1, 2, 4\n",
-      "❌ AXP failed Minervini: 1, 2, 4\n",
-      "✅ APH passed Minervini\n",
-      "❌ APO failed Minervini: 1, 2, 3, 4, 5, 7\n",
-      "❌ ANET failed Minervini: 1, 2, 4\n",
-      "✅ T passed Minervini\n",
-      "❌ ATO failed Minervini: 6\n",
-      "✅ AZO passed Minervini\n",
-      "❌ AXON failed Minervini: 5\n",
-      "❌ BKR failed Minervini: 1, 2, 4\n",
-      "❌ BAC failed Minervini: 1, 2, 4\n",
-      "❌ BLK failed Minervini: 1, 2, 4\n",
-      "❌ BX failed Minervini: 1, 2, 3, 4\n",
-      "✅ BK passed Minervini\n",
-      "❌ BA failed Minervini: 5\n",
-      "❌ BKNG failed Minervini: 5\n",
-      "❌ BSX failed Minervini: 1, 5, 6\n",
-      "✅ AVGO passed Minervini\n",
-      "❌ CHRW failed Minervini: 1, 2, 4\n",
-      "❌ CDNS failed Minervini: 1, 2, 4\n",
-      "✅ COF passed Minervini\n",
-      "❌ CAH failed Minervini: 5\n",
-      "❌ CCL failed Minervini: 1, 2, 4\n",
-      "❌ CAT failed Minervini: 1, 2, 4\n",
-      "✅ CBRE passed Minervini\n",
-      "❌ COR failed Minervini: 5\n",
-      "✅ CNP passed Minervini\n",
-      "❌ SCHW failed Minervini: 5\n",
-      "❌ CSCO failed Minervini: 5\n",
-      "✅ C passed Minervini\n",
-      "❌ CFG failed Minervini: 1, 2, 4\n",
-      "❌ CME failed Minervini: 1, 5, 6\n",
-      "❌ COIN failed Minervini: 1, 2, 4, 5, 7\n",
-      "✅ CEG passed Minervini\n",
-      "✅ GLW passed Minervini\n",
-      "❌ CTVA failed Minervini: 5\n",
-      "❌ CRWD failed Minervini: 5\n",
-      "❌ CMI failed Minervini: 1, 2, 4\n",
-      "✅ CVS passed Minervini\n",
-      "✅ DRI passed Minervini\n",
-      "❌ DDOG failed Minervini: 1, 2, 4, 5\n",
-      "❌ DAL failed Minervini: 1, 2, 3, 4\n",
-      "❌ DG failed Minervini: 5\n",
-      "❌ DLTR failed Minervini: 5\n",
-      "✅ DASH passed Minervini\n",
-      "❌ ETN failed Minervini: 1, 2, 3, 4\n",
-      "✅ EBAY passed Minervini\n",
-      "✅ EA passed Minervini\n",
-      "❌ EMR failed Minervini: 1, 2, 4, 5\n",
-      "✅ ETR passed Minervini\n",
-      "❌ EQT failed Minervini: 1, 4, 5\n",
-      "❌ EVRG failed Minervini: 6\n",
-      "❌ EXE failed Minervini: 1, 4, 5\n",
-      "❌ EXPE failed Minervini: 1, 2, 4\n",
-      "✅ FFIV passed Minervini\n",
-      "❌ FAST failed Minervini: 5\n",
-      "✅ FOXA passed Minervini\n",
-      "❌ FOX failed Minervini: 5\n",
-      "❌ BEN failed Minervini: 5\n",
-      "✅ GRMN passed Minervini\n",
-      "✅ GE passed Minervini\n",
-      "✅ GEV passed Minervini\n",
-      "❌ GNRC failed Minervini: 1, 2, 4\n",
-      "❌ GM failed Minervini: 1, 2, 4\n",
-      "❌ GILD failed Minervini: 5\n",
-      "✅ GL passed Minervini\n",
-      "✅ GS passed Minervini\n",
-      "❌ HPE failed Minervini: 1, 2, 4\n",
-      "✅ HLT passed Minervini\n",
-      "✅ HWM passed Minervini\n",
-      "❌ HBAN failed Minervini: 1, 2, 4\n",
-      "✅ IBM passed Minervini\n",
-      "✅ IDXX passed Minervini\n",
-      "❌ INCY failed Minervini: 1, 2, 4\n",
-      "✅ PODD passed Minervini\n",
-      "❌ IBKR failed Minervini: 5\n",
-      "❌ IVZ failed Minervini: 1, 2, 4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\364358\\AppData\\Local\\Temp\\ipykernel_10908\\2901662644.py:67: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  detailedExportList = pd.concat([detailedExportList, pd.DataFrame([{\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ JBL failed Minervini: 5\n",
-      "❌ J failed Minervini: 1, 2, 4\n",
-      "✅ JCI passed Minervini\n",
-      "✅ JPM passed Minervini\n",
-      "❌ KMI failed Minervini: 1, 2, 4\n",
-      "✅ KLAC passed Minervini\n",
-      "❌ KR failed Minervini: 1, 5, 6\n",
-      "✅ LHX passed Minervini\n",
-      "✅ LH passed Minervini\n",
-      "✅ LRCX passed Minervini\n",
-      "❌ LVS failed Minervini: 1, 2, 4, 5\n",
-      "✅ LYV passed Minervini\n",
-      "❌ L failed Minervini: 6\n",
-      "❌ MCK failed Minervini: 5\n",
-      "✅ META passed Minervini\n",
-      "✅ MU passed Minervini\n",
-      "✅ MNST passed Minervini\n",
-      "✅ MS passed Minervini\n",
-      "❌ MOS failed Minervini: 5\n",
-      "❌ NDAQ failed Minervini: 5\n",
-      "❌ NFLX failed Minervini: 5\n",
-      "✅ NEM passed Minervini\n",
-      "✅ NTRS passed Minervini\n",
-      "❌ NCLH failed Minervini: 1, 2, 3, 4\n",
-      "✅ NRG passed Minervini\n",
-      "✅ NVDA passed Minervini\n",
-      "✅ ORLY passed Minervini\n",
-      "✅ ORCL passed Minervini\n",
-      "✅ PLTR passed Minervini\n",
-      "✅ PSKY passed Minervini\n",
-      "✅ PH passed Minervini\n",
-      "❌ PAYC failed Minervini: 1, 4, 5\n",
-      "❌ PM failed Minervini: 1, 5\n",
-      "❌ PWR failed Minervini: 5\n",
-      "✅ RL passed Minervini\n",
-      "❌ RJF failed Minervini: 1, 2, 4\n",
-      "✅ RTX passed Minervini\n",
-      "❌ RF failed Minervini: 1, 2, 4\n",
-      "❌ ROK failed Minervini: 5\n",
-      "❌ RCL failed Minervini: 5\n",
-      "✅ STX passed Minervini\n",
-      "❌ SNA failed Minervini: 1, 2, 3, 4, 6\n",
-      "❌ STT failed Minervini: 5\n",
-      "❌ STLD failed Minervini: 3\n",
-      "❌ SYF failed Minervini: 1, 2, 4\n",
-      "✅ TTWO passed Minervini\n",
-      "✅ TPR passed Minervini\n",
-      "✅ TEL passed Minervini\n",
-      "✅ TDY passed Minervini\n",
-      "❌ TSLA failed Minervini: 1, 2, 4\n",
-      "✅ TKO passed Minervini\n",
-      "❌ TRMB failed Minervini: 1, 2, 4, 5\n",
-      "✅ UBER passed Minervini\n",
-      "✅ ULTA passed Minervini\n",
-      "❌ UAL failed Minervini: 1, 2, 4\n",
-      "❌ URI failed Minervini: 1, 2, 4\n",
-      "✅ VLO passed Minervini\n",
-      "✅ VRSN passed Minervini\n",
-      "✅ VST passed Minervini\n",
-      "❌ VMC failed Minervini: 1, 2, 4\n",
-      "✅ WRB passed Minervini\n",
-      "✅ WMT passed Minervini\n",
-      "❌ DIS failed Minervini: 1, 2, 4, 5\n",
-      "✅ WBD passed Minervini\n",
-      "✅ WFC passed Minervini\n",
-      "✅ WELL passed Minervini\n",
-      "✅ WDC passed Minervini\n",
-      "❌ WSM failed Minervini: 1, 2, 4\n",
-      "✅ WMB passed Minervini\n",
-      "✅ WYNN passed Minervini\n",
       "\n",
       "📄 72 stocks passed Minervini, saved to Minervini_Passed.csv\n",
       "📄 79 stocks failed Minervini, saved to Minervini_Failed.csv\n"
@@ -462,113 +394,8 @@
     }
    ],
    "source": [
-    "# 📌 Initialize export DataFrame\n",
-    "detailedExportList = pd.DataFrame(columns=[\n",
-    "    'Stock', 'Price', '50 Day MA', '150 Day MA', '200 Day MA', \n",
-    "    '52 Week Low', '52 Week High', 'RS_Rating', 'Status'  # 🔹 CHANGED\n",
-    "])\n",
-    "\n",
-    "# ✅ Iterate only over top RS stocks\n",
-    "for stock in rs_top_df['Ticker']:\n",
-    "    try:\n",
-    "        # Use already loaded data\n",
-    "        df = yahoo_data.get(stock)\n",
-    "        if df is None or df.empty:\n",
-    "            print(f\"⚠️ No data for {stock}, skipping\")\n",
-    "            continue\n",
-    "\n",
-    "        # Clean and prep columns\n",
-    "        df.columns = [col.split(\". \")[-1] for col in df.columns]\n",
-    "        df[['close', 'high', 'low']] = df[['close', 'high', 'low']].astype(float)\n",
-    "\n",
-    "        # Compute SMAs\n",
-    "        df['SMA_50'] = df['close'].rolling(window=50).mean()\n",
-    "        df['SMA_150'] = df['close'].rolling(window=150).mean()\n",
-    "        df['SMA_200'] = df['close'].rolling(window=200).mean()\n",
-    "\n",
-    "        # Grab latest values\n",
-    "        currentClose = df['close'].iloc[-1]\n",
-    "        SMA_50 = df['SMA_50'].iloc[-1]\n",
-    "        SMA_150 = df['SMA_150'].iloc[-1]\n",
-    "        SMA_200 = df['SMA_200'].iloc[-1]\n",
-    "\n",
-    "        # 52-week high/low\n",
-    "        low_52week = round(df['low'].iloc[-260:].min(), 2)\n",
-    "        high_52week = round(df['high'].iloc[-260:].max(), 2)\n",
-    "\n",
-    "        # RS Rating\n",
-    "        RS_Rating = round(rs_top_df.loc[rs_top_df['Ticker'] == stock, 'RS_Rating'].iloc[0])\n",
-    "\n",
-    "        # Handle insufficient SMA data\n",
-    "        if pd.isnull([SMA_50, SMA_150, SMA_200]).any():\n",
-    "            status_msg = f\"❌ Skipped {stock}: Not enough data for SMAs ({len(df)} rows)\"\n",
-    "            print(status_msg)\n",
-    "        else:\n",
-    "            # Compare 200-day SMA 20 days ago\n",
-    "            SMA_200_20 = df['SMA_200'].iloc[-20] if len(df) >= 220 else 0\n",
-    "\n",
-    "            # Minervini conditions\n",
-    "            condition_1 = currentClose > SMA_150 > SMA_200\n",
-    "            condition_2 = SMA_150 > SMA_200\n",
-    "            condition_3 = SMA_200 > SMA_200_20\n",
-    "            condition_4 = SMA_50 > SMA_150 > SMA_200\n",
-    "            condition_5 = currentClose > SMA_50\n",
-    "            condition_6 = currentClose >= 1.3 * low_52week\n",
-    "            condition_7 = currentClose >= 0.75 * high_52week\n",
-    "\n",
-    "            conditions = [condition_1, condition_2, condition_3, condition_4,\n",
-    "                          condition_5, condition_6, condition_7]\n",
-    "\n",
-    "            if all(conditions):\n",
-    "                status_msg = \"✅ Passed Minervini\"\n",
-    "                print(f\"✅ {stock} passed Minervini\")\n",
-    "            else:\n",
-    "                failed = [str(i+1) for i, c in enumerate(conditions) if not c]\n",
-    "                status_msg = f\"❌ Failed Minervini conditions: {', '.join(failed)}\"\n",
-    "                print(f\"❌ {stock} failed Minervini: {', '.join(failed)}\")\n",
-    "\n",
-    "        # Append to export list once per stock\n",
-    "        detailedExportList = pd.concat([detailedExportList, pd.DataFrame([{\n",
-    "            'Stock': stock,\n",
-    "            'Price': currentClose,\n",
-    "            '50 Day MA': SMA_50,\n",
-    "            '150 Day MA': SMA_150,\n",
-    "            '200 Day MA': SMA_200,\n",
-    "            '52 Week Low': low_52week,\n",
-    "            '52 Week High': high_52week,\n",
-    "            'RS_Rating': RS_Rating,\n",
-    "            'Status': status_msg\n",
-    "        }])], ignore_index=True)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"⚠️ Could not process {stock}: {e}\")\n",
-    "\n",
-    "# ✅ Split results\n",
-    "passed_df = detailedExportList[detailedExportList['Status'] == \"✅ Passed Minervini\"]\n",
-    "failed_df = detailedExportList[detailedExportList['Status'] != \"✅ Passed Minervini\"]\n",
-    "\n",
-    "# Sort passed DataFrame by descending RS_Rating, then ascending Stock\n",
-    "passed_df_sorted = passed_df.sort_values(\n",
-    "    by=['RS_Rating', 'Stock'],\n",
-    "    ascending=[False, True]\n",
-    ").reset_index(drop=True)\n",
-    "\n",
-    "# Sort failed DataFrame by descending RS_Rating, then ascending Stock\n",
-    "failed_df_sorted = failed_df.sort_values(\n",
-    "    by=['RS_Rating', 'Stock'],\n",
-    "    ascending=[False, True]\n",
-    ").reset_index(drop=True)\n",
-    "\n",
-    "# Export to CSV\n",
-    "passed_df_sorted.to_csv(\"Minervini_Passed.csv\", index=False)\n",
-    "failed_df_sorted.to_csv(\"Minervini_Failed.csv\", index=False)\n",
-    "\n",
-    "# # 📤 Export to Excel\n",
-    "# passed_df_sorted.to_excel(\"Minervini_Passed.xlsx\", index=False)\n",
-    "# failed_df_sorted.to_excel(\"Minervini_Failed.xlsx\", index=False)\n",
-    "\n",
-    "print(f\"\\n📄 {len(passed_df_sorted)} stocks passed Minervini, saved to Minervini_Passed.csv\")\n",
-    "print(f\"📄 {len(failed_df_sorted)} stocks failed Minervini, saved to Minervini_Failed.csv\")\n"
+    "rs_top_df = create_rs_top_df(successful_tickers, returns_multiples)\n",
+    "generate_minervini_report(yahoo_data, rs_top_df)"
    ]
   }
  ],
